2012-05-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support options set by preferences assigned within profile.xml

	* xml/profile.xml (preferences): New element; add defaults.

	* src/pkgopts.h (OPTION_ASSIGNED_FLAGS, OPTION_DESKTOP_ARGS):
	(OPTION_START_MENU_ARGS): New enumerated constants; define them.
	(OPTION_DESKTOP, OPTION_START_MENU): New manifest constants.
	(OPTION_ASSIGNED, mark_option_as_set): New macros; define them.
	(pkgOpts::GetValue, pkgOpts::GetString): Restrict look-up index to
	least significant 12-bits of full-range index value.
	(pkgOpts::IsSet): New inline method; implement it.

	* src/clistub.c (main): Reimplement --desktop and --start-menu
	options; each now becomes an OPTION_GENERIC optarg string store.
	(set_script_hook): Function no longer used; delete it; delegate to...
	* src/pkgbase.h (pkgXmlDocument::EstablishPreferences): ...this new
	method; declare it, providing its implementation in...
	* src/pkgopts.cpp: ...this new file; invoke it...
	* src/climain.cpp (climain): ...here.

	* Makefile.in (CORE_DLL_OBJECTS): Add pkgopts.$OBJEXT

2012-04-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct sequence of installation/removal progress reporting.

	* src/pkgunst.cpp (pkgRemove): Delay output of "removing package ..."
	message, until after pre-remove hooks have run; this ensures that any
	output from the pre-remove hook scripts appears in correct sequence.

	* src/pkginst.cpp (pkgInstall): Likewise, for "installing package ..."
	message, in relation to pre-install hooks.

2012-04-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.5-beta-20120426-1 released.

	* configure.ac (AC_INIT): Version number updated.
	* srcdist-doc/NEWS.in: Updated; bug-fix notifications added.
	* All files (r0-5-beta-20120426-1): Tag assigned.

2012-04-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Interim work-around for MinGW-Bug #3520864.
